# HelperCompanion

./: README.md  main.py  progress_default.json  pyproject.toml  users.json
attached_assets/: main.py  pyproject.toml  session_2d8d5bb8.json  users.json
components/: __init__.py  chat.py  file_upload.py  progress_analytics.py  simple_auth.py  teacher_dashboard.py  visualization.py
config/: README.md  __init__.py
utils/: __init__.py  ai_models.py  file_processor.py  firebase_manager.py  progress_tracker.py  simple_auth.py
