[project]
name = "study-companion-ai"
version = "0.1.0"
description = "AI-powered study companion for exam preparation"
requires-python = ">=3.11"
dependencies = [
    "firebase-admin>=6.8.0",
    "google-generativeai>=0.8.4",
    "openai>=1.63.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pypdf2>=3.0.1",
    "pyrebase4>=4.8.0",
    "streamlit>=1.42.0",
]
